# MQ2SAT

./: Makefile.in  README.md  bits.h  configure  configure.ac  galois.h  mq2sat.c  parsemap.h
